# conways_golot

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
src/: camera.rs  life.rs  main.rs
