[package]
name = "conways_golot"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1
debug = 1
debug-assertions = true

[profile.dev.package."*"]
opt-level = 2
debug = "line-tables-only"

[profile.release]
opt-level = "z"
panic = "abort"
strip = true
lto = true
codegen-units = 1

[workspace]
resolver = "2"

[features]
dynamic_linking = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
	"bevy_asset",
	"bevy_color",
	"bevy_core_pipeline",
	"bevy_pbr",
	"bevy_render",
	"bevy_state",
	"bevy_window",
	"bevy_winit",
	"hdr",
	"ktx2",
	"zlib",
	"multi_threaded",
] }
rand = "0.8.5"
wasm-bindgen = "0.2"
